Import of FRANCKC/Net-Riak-0.03 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.03
gitpan-cpan-path:         FRANCKC/Net-Riak-0.03.tar.gz
gitpan-cpan-author:       FRANCKC
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -23,9 +23,10 @@ requires:
   MIME::Base64: 0
   Moose: 0
   Moose::Role: 0
+  MooseX::Role::Parameterized: 0
   Scalar::Util: 0
   URI: 0
-version: 0.02
+version: 0.03
 x_Dist_Zilla:
   plugins:
     -
