--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,14 @@ abstract: 'Interface to Riak'
 author:
   - 'franck cuny <franck@lumberjaph.net>'
 build_requires:
+  Data::Dumper: 0
   HTTP::Response: 0
   Test::More: 0
   YAML::Syck: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.101540, CPAN::Meta::Converter version 2.101461'
+generated_by: 'Dist::Zilla version 4.101900, CPAN::Meta::Converter version 2.102160'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -27,85 +28,85 @@ requires:
   MooseX::Role::Parameterized: 0
   Scalar::Util: 0
   URI: 0
-version: 0.05
+version: 0.06
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: NoTabsTests
@@ -113,19 +114,19 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: EOLTests
-      version: 0.01
+      version: 0.02
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: PodWeaver
-      version: 3.100710
+      version: 3.101640
     -
       class: Dist::Zilla::Plugin::AutoPrereq
       name: AutoPrereq
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: ReadmeFromPod
-      version: 0.11
+      version: 0.12
     -
       class: Dist::Zilla::Plugin::CheckChangeLog
       name: CheckChangeLog
@@ -133,25 +134,25 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: UploadToCPAN
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.101540
+      version: 4.101900
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.101540
+      version: 4.101900
   zilla:
-    class: Dist::Zilla
+    class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.101540
+    version: 4.101900
