--- a/META.yml
+++ b/META.yml
@@ -3,14 +3,13 @@ abstract: 'Interface to Riak'
 author:
   - 'franck cuny <franck@lumberjaph.net>'
 build_requires:
-  Data::Dumper: 0
   HTTP::Response: 0
   Test::More: 0
   YAML::Syck: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.102341, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.200003, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,6 +19,7 @@ requires:
   Carp: 0
   HTTP::Request: 0
   JSON: 0
+  LWP::ConnCache: 0
   LWP::UserAgent: 0
   MIME::Base64: 0
   Moose: 0
@@ -28,85 +28,85 @@ requires:
   MooseX::Role::Parameterized: 0
   Scalar::Util: 0
   URI: 0
-version: 0.11
+version: 0.13
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: NoTabsTests
@@ -118,11 +118,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: PodWeaver
-      version: 3.101640
+      version: 3.101641
     -
       class: Dist::Zilla::Plugin::AutoPrereq
       name: AutoPrereq
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: ReadmeFromPod
@@ -134,25 +134,25 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: UploadToCPAN
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.102341
+      version: 4.200003
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.102341
+      version: 4.200003
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.102341
+    version: 4.200003
