Import of RGE/Net-Riak-0.14 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.14
gitpan-cpan-path:         RGE/Net-Riak-0.14.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author = franck cuny <franck@lumberjaph.net>
 license = Perl_5
 copyright_holder = linkfluence
 copyright_year = 2011
-version = 0.13
+version = 0.14
 
 [@Filter]
 bundle = @Basic
@@ -11,10 +11,10 @@ bundle = @Basic
 [MetaConfig]
 [MetaJSON]
 [PkgVersion]
-[PodSyntaxTests]
+; [PodSyntaxTests]
 [PodCoverageTests]
 [NoTabsTests]
-[EOLTests]
+; [EOLTests]
 [PodWeaver]
 [AutoPrereq]
 [ReadmeFromPod]
