Import of RGE/Net-Riak-0.15-TRIAL from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.15-TRIAL
gitpan-cpan-path:         RGE/Net-Riak-0.15-TRIAL.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,9 @@
 name = Net-Riak
-author = franck cuny <franck@lumberjaph.net>
+author = franck cuny <franck@lumberjaph.net>, robin edwards <robin.ge@gmail.com>
 license = Perl_5
 copyright_holder = linkfluence
 copyright_year = 2011
-version = 0.14
+version = 0.15
 
 [@Filter]
 bundle = @Basic
@@ -11,12 +11,12 @@ bundle = @Basic
 [MetaConfig]
 [MetaJSON]
 [PkgVersion]
-; [PodSyntaxTests]
+;[PodSyntaxTests]
 [PodCoverageTests]
 [NoTabsTests]
-; [EOLTests]
+;[EOLTests]
 [PodWeaver]
-[AutoPrereq]
+[AutoPrereqs]
 [ReadmeFromPod]
 [CheckChangeLog]
 [UploadToCPAN]
