--- a/META.yml
+++ b/META.yml
@@ -1,108 +1,115 @@
 ---
 abstract: 'Interface to Riak'
 author:
-  - 'franck cuny <franck@lumberjaph.net>'
+  - 'franck cuny <franck@lumberjaph.net>, robin edwards <robin.ge@gmail.com>'
 build_requires:
   HTTP::Response: 0
   Test::More: 0
-  YAML::Syck: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.31
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200003, CPAN::Meta::Converter version 2.102400'
+generated_by: 'Dist::Zilla version 4.102341, CPAN::Meta::Converter version 2.102400'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Net-Riak
 requires:
-  Carp: 0
-  HTTP::Request: 0
+  Data::Dump: 0
+  Data::Dumper: 0
+  Exporter: 0
+  Google::ProtocolBuffers: 0
+  IO::Socket::INET: 0
   JSON: 0
   LWP::ConnCache: 0
   LWP::UserAgent: 0
+  List::Util: 0
   MIME::Base64: 0
   Moose: 0
   Moose::Role: 0
-  Moose::Util::TypeConstraints: 0
   MooseX::Role::Parameterized: 0
+  MooseX::Traits: 0
+  MooseX::Types: 0
+  MooseX::Types::Moose: 0
+  MooseX::Types::Structured: 0
   Scalar::Util: 0
   URI: 0
-version: 0.14
+  bytes: 0
+version: 0.15
 x_Dist_Zilla:
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Filter/GatherDir'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Filter/PruneCruft'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Filter/ManifestSkip'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Filter/MetaYAML'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::License
       name: '@Filter/License'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Filter/Readme'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Filter/ExtraTests'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Filter/ExecDir'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Filter/ShareDir'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Filter/MakeMaker'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Filter/Manifest'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Filter/TestRelease'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Filter/ConfirmRelease'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Filter/UploadToCPAN'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: NoTabsTests
@@ -112,9 +119,9 @@ x_Dist_Zilla:
       name: PodWeaver
       version: 3.101641
     -
-      class: Dist::Zilla::Plugin::AutoPrereq
-      name: AutoPrereq
-      version: 4.200003
+      class: Dist::Zilla::Plugin::AutoPrereqs
+      name: AutoPrereqs
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::ReadmeFromPod
       name: ReadmeFromPod
@@ -126,25 +133,25 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: UploadToCPAN
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.200003
+      version: 4.102341
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.200003
+      version: 4.102341
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 4.200003
+      is_trial: 1
+    version: 4.102341
