Import of RGE/Net-Riak-0.15 from CPAN.
gitpan-cpan-distribution: Net-Riak
gitpan-cpan-version:      0.15
gitpan-cpan-path:         RGE/Net-Riak-0.15.tar.gz
gitpan-cpan-author:       RGE
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -11,12 +11,13 @@ bundle = @Basic
 [MetaConfig]
 [MetaJSON]
 [PkgVersion]
-;[PodSyntaxTests]
+[PodSyntaxTests]
 [PodCoverageTests]
 [NoTabsTests]
 ;[EOLTests]
 [PodWeaver]
-[AutoPrereqs]
+[AutoPrereq]
 [ReadmeFromPod]
 [CheckChangeLog]
 [UploadToCPAN]
+[Git::Tag]
