--- a/dist.ini
+++ b/dist.ini
@@ -3,7 +3,7 @@ author = franck cuny <franck@lumberjaph.net>, robin edwards <robin.ge@gmail.com>
 license = Perl_5
 copyright_holder = linkfluence
 copyright_year = 2013
-version = 0.1701
+version = 0.1702
 
 [@Filter]
 bundle = @Basic
@@ -14,7 +14,7 @@ bundle = @Basic
 [PodSyntaxTests]
 [PodCoverageTests]
 [NoTabsTests]
-;[EOLTests]
+[EOLTests]
 [PodWeaver]
 [AutoPrereq]
 [ReadmeFromPod]
